...
        android:textColor="#E77111"
        android:textSize="18dp"
        android:layout_below="@+id/login_appLogo"
        />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_login_text"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
...
        android:textColor="#EDECF1"
        android:textColorHint="#DDDDDD"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
...
            android:textStyle="bold"

            />

    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="12dp"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
...
