...
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/add_product_number_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/product_price_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_orange_dark"
...
        app:backGroundColor="#F46538"
        app:finalNumber="10"
        app:initialNumber="1"
        app:textSize="8sp"></com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

    <Button
        android:id="@+id/pd_add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F46538"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:text="Add to cart"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />

</RelativeLayout>
